# mines

./: CMakeLists.txt  Mines_en.ts  README.md  aboutdialog.cpp  aboutdialog.h  cell.cpp  cell.h  clock.cpp  clock.h  customgamedialog.cpp  customgamedialog.h  gameboard.cpp  gameboard.h  main.cpp  mainwindow.cpp  mainwindow.h  mine.icns  minefield.cpp  minefield.h  res.qrc  svg2icns.sh
resources/: win.rc
